--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ presskit_download_link                    :                                     
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : SentryGo                                       # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : View, share and store sentry/DashCam clips on the go.
+app_description                           : TeslaCam on your iPhone.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -21,7 +21,7 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : Jean Pierre
 your_link                                 :
-your_city                                 : Dallas
+your_city                                 : Dallas 🌎
 email_address                             : support@sentrygo.app
 facebook_username                         :                                           
 instagram_username                        :
@@ -36,15 +36,15 @@ features                                  :
 
   - title                                 : Share
     description                           : SentryGo will stich and export full clips from each camera to share with a tap of a button.
-    fontawesome_icon_name                 : magic
+    fontawesome_icon_name                 : share
     
-  - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
-    fontawesome_icon_name                 : mobile
+  - title                                 : Search
+    description                           : Search for any clip by name.
+    fontawesome_icon_name                 : search
 
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
-    fontawesome_icon_name                 : play-circle
+  - title                                 : Viewer
+    description                           : With picture in picture you can easily see all angles at the same time.
+    fontawesome_icon_name                 : fa-play-circle-o
 
 
 
