--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ features                                  :
 
   - title                                 : Viewer
     description                           : With picture in picture you can easily see all angles at the same time.
-    fontawesome_icon_name                 : play-circle-o
+    fontawesome_icon_name                 : play
 
 
 
