--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ features                                  :
     fontawesome_icon_name                 : search
 
   - title                                 : Viewer
-    description                           : With picture in picture you can easily see all angles at the same time.
+    description                           : With picture in picture you can easily see all camera angles at the same time.
     fontawesome_icon_name                 : play
 
 
